Fixed minor typo

--- a/Implementation/vggnet-Cifar10.ipynb
+++ b/Implementation/vggnet-Cifar10.ipynb
@@ -729,7 +729,7 @@
     }
    ],
    "source": [
-    "vgg.train(trainloader, testloader, resume=False, \n",
+    "vgg.train(trainloader, testloader, resume=resume, \n",
     "          start_epoch=start_epoch, epochs=epochs, \n",
     "          lr=lr, momentum=momentum, weight_decay=weight_decay)"
    ]
@@ -809,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
